compiler/testData/diagnostics/tests/controlFlowAnalysis/assignedInTryWithoutCatch.fir.kt
fun foo() {
    val a: Int
    try {
        a = 42
    }
    finally {
    }
    <!UNINITIALIZED_VARIABLE!>a<!>.hashCode()
}